--- a/main.html
+++ b/main.html
@@ -87,7 +87,7 @@
 							<h1>Сок Сельдерея Здоровье Печени</h1>
 							<p>🇬🇧Аня, учусь по специальности гербалист и натуропат (CNM London)<br/>🍎 Публикации по Э.Уильяму<br/>🍎Натур. питание как лечение <br/>🍎Курс Крепкий иммунитет ⬇️</p>
 							<p>
-								<a href="./links.html"><b>Ссылки</b></a>
+								<a href="./links.html"><b>Актуальное</b></a>
 							</p>
 						</div>
 					</div>
