--- a/links.html
+++ b/links.html
@@ -347,7 +347,10 @@
 "
 							class="links-page-soc__link" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 					</div>
-					<div class="links-page-footer">@anishapo_nutrition рекомендует <a href="https://lichnyj-brend.ru/start?ref=anishapo_nutrition" target="_blank">lichnyjbrend</a></div>
+					<div class="links-page-footer">
+						<a href="https://lichnyj-brend.ru/start?ref=anishapo_nutrition" target="_blank">Личный Бренд</a><br/>
+						@anishapo_nutrition рекомендует <br/>&nbsp;
+					</div>
 				</div>
 			</div>	
 		</div>			
