--- a/error.html
+++ b/error.html
@@ -43,7 +43,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&oh=c196ea8fcdbe295ba85712ca53fde920&oe=5E7D8556" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=HQhot8SBvo0AX884s-h&oh=4e57ba1a9b3dc3c8c019213436d054c8&oe=5E7D8556" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -81,77 +81,77 @@
 				<div class="container">
 					<h2 class="article-more__title">ПОПУЛЯРНЫЕ</h2>
 					<div class="article-more__list">
-							<a href="./posts/./shok-terapiya-tsinkom-xretsept.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>2239</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79495951_719690331850455_7533328383661606297_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&oh=b0e2a26797a3c14c75049b1b6d2bb12e&oe=5E825F5F" alt="ШОК-ТЕРАПИЯ ЦИНКОМ (РЕЦЕПТ">
-							</div>
-							<div class="article-more__item-name">ШОК-ТЕРАПИЯ ЦИНКОМ (РЕЦЕПТ</div>
-						</a>
-							<a href="./posts/./shok-terapiya-vitaminom-s-xretsept.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1760</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/74698398_149924889666435_7270387919372837717_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&oh=3ba8613365e0bcd881e5c5051dd5388a&oe=5E7320C2" alt="ШОК-ТЕРАПИЯ ВИТАМИНОМ С (РЕЦЕПТ">
-							</div>
-							<div class="article-more__item-name">ШОК-ТЕРАПИЯ ВИТАМИНОМ С (РЕЦЕПТ</div>
-						</a>
 							<a href="./posts/./zdorov-e-kozhix-volos-1.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1322</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/71300678_421259138763394_6741734753090138278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&oh=eb845a37b3bc012b933db424d0d7a4c8&oe=5E8F8186" alt="ЗДОРОВЬЕ КОЖИ, ВОЛОС">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/71300678_421259138763394_6741734753090138278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=2r7nGtnVLcMAX9bis28&oh=144bc1affaa81351ad7eb8c6cd245bbf&oe=5E8F8186" alt="ЗДОРОВЬЕ КОЖИ, ВОЛОС">
 							</div>
 							<div class="article-more__item-name">ЗДОРОВЬЕ КОЖИ, ВОЛОС</div>
 						</a>
 							<a href="./posts/./varikoz-kak-sledstvie-khronicheskogo.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1161</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1174</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/75602183_154596209213826_4616373966861890671_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&oh=18d96bdacdc261d9dfa13a42631b15ba&oe=5E81FF1B" alt="ВАРИКОЗ КАК СЛЕДСТВИЕ ХРОНИЧЕСКОГО">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/75602183_154596209213826_4616373966861890671_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=K-Be55viE7sAX-rrptm&oh=ccd032b6aa388fabc5c285330c3b5083&oe=5EA98C1B" alt="ВАРИКОЗ КАК СЛЕДСТВИЕ ХРОНИЧЕСКОГО">
 							</div>
 							<div class="article-more__item-name">ВАРИКОЗ КАК СЛЕДСТВИЕ ХРОНИЧЕСКОГО</div>
 						</a>
 							<a href="./posts/./prodolzhenie-temy-xzdorov-e-kozhi.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1119</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1120</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/69607460_559662971524137_1891219364530969936_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&oh=35885f1c22896858af6c1288d06d5956&oe=5E8FB515" alt="Продолжение темы «Здоровье кожи,">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/69607460_559662971524137_1891219364530969936_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=lDkkuJATGGoAX8j2ez1&oh=162aa5a4ef1ffcf863fc3b8ad0b368ae&oe=5E8FB515" alt="Продолжение темы «Здоровье кожи,">
 							</div>
 							<div class="article-more__item-name">Продолжение темы «Здоровье кожи,</div>
 						</a>
 							<a href="./posts/./zdorov-e-kozhix-volos.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1017</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1025</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79633664_202137257617442_6612452284910546481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&oh=cb57e20c51db1e44014fce34b55be538&oe=5E6F6133" alt="ЗДОРОВЬЕ КОЖИ, ВОЛОС,">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79633664_202137257617442_6612452284910546481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=iMYDCxMZtuUAX_hcIv5&oh=51dfa4ddcae3c337fa51c5597c62fe49&oe=5E96EE33" alt="ЗДОРОВЬЕ КОЖИ, ВОЛОС,">
 							</div>
 							<div class="article-more__item-name">ЗДОРОВЬЕ КОЖИ, ВОЛОС,</div>
 						</a>
 							<a href="./posts/./simptomy-khronicheskogo-obezvozhivaniya.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>916</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>981</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79012842_2795305293861173_4955388126154466684_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&oh=e7dbe779f7f4cdabe28707e78a5746e4&oe=5DFAC7DF" alt="СИМПТОМЫ ХРОНИЧЕСКОГО ОБЕЗВОЖИВАНИЯ">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79012842_2795305293861173_4955388126154466684_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=1wVp1Ah6kjMAX-CutbT&oh=102dcc8b6472f938ee627a2058ce59a4&oe=5DFE139F" alt="СИМПТОМЫ ХРОНИЧЕСКОГО ОБЕЗВОЖИВАНИЯ">
 							</div>
 							<div class="article-more__item-name">СИМПТОМЫ ХРОНИЧЕСКОГО ОБЕЗВОЖИВАНИЯ</div>
 						</a>
 							<a href="./posts/./skol-ko-vody-nuzhno-pit--za-den-.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>902</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>912</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79498718_102842821157116_5120478440220751382_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&oh=19338526b17d4e770ffc57dd58d04b67&oe=5E705D8A" alt="СКОЛЬКО ВОДЫ НУЖНО ПИТЬ ЗА ДЕНЬ?">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79498718_102842821157116_5120478440220751382_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=Svpw1n-oGB4AX98x5_I&oh=bfa6f676a7f79806daa016f1ae6c2ef6&oe=5E97EA8A" alt="СКОЛЬКО ВОДЫ НУЖНО ПИТЬ ЗА ДЕНЬ?">
 							</div>
 							<div class="article-more__item-name">СКОЛЬКО ВОДЫ НУЖНО ПИТЬ ЗА ДЕНЬ?</div>
+						</a>
+							<a href="./posts/./zdorov-e-nogtey-xx.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>685</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/73387330_415897852651055_8428218304294452840_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=UhoE2oaTS0gAX-0-6ST&oh=bf08b46b3af934326ddbc01a6c2bbff6&oe=5E74BBB9" alt="ЗДОРОВЬЕ НОГТЕЙ 🌱">
+							</div>
+							<div class="article-more__item-name">ЗДОРОВЬЕ НОГТЕЙ 🌱</div>
+						</a>
+							<a href="./posts/./khronicheskaya-ustalost-x-bessonnitsa.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>630</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/78933660_185832269132927_7920093313330287447_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=TBC7GDz5mLMAX9F0q4j&oh=fbd3e514318a437c4b8d963fb233d06a&oe=5E956E25" alt="Хроническая усталость, бессонница,">
+							</div>
+							<div class="article-more__item-name">Хроническая усталость, бессонница,</div>
 						</a>
 						</div>
 				</div>
