--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="энтониуильям medicalmedium russia медикал медиум anishapo translate сок сельдерея ukraine спасение печени liver rescue book едаменяющая жизнь">
-    <meta name="keywords" content="энтониуильям medicalmedium russia медикал медиум anishapo translate сок сельдерея ukraine спасение печени liver rescue book едаменяющая жизнь" />
+    <meta name="description" content="энтониуильям медикалмедиум anishapo translate смузи детокс vimergy кожа сфс сподарками ногти волосы спасениепечени">
+    <meta name="keywords" content="энтониуильям медикалмедиум anishapo translate смузи детокс vimergy кожа сфс сподарками ногти волосы спасениепечени" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="энтониуильям medicalmedium russia медикал медиум anishapo translate сок сельдерея ukraine спасение печени liver rescue book едаменяющая жизнь" />
+    <meta property="og:description" content="энтониуильям медикалмедиум anishapo translate смузи детокс vimergy кожа сфс сподарками ногти волосы спасениепечени" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -62,7 +62,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&oh=c196ea8fcdbe295ba85712ca53fde920&oe=5E7D8556" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=HQhot8SBvo0AX884s-h&oh=4e57ba1a9b3dc3c8c019213436d054c8&oe=5E7D8556" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -87,18 +87,10 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="medicalmedium russia">
-									<a href="./tags/./medicalmedium-russia.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/medicalmedium-russia.png);"></div>
-										<div class="stories__slide-txt" style="">medicalmedium russia</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="медикал медиум">
-									<a href="./tags/./medikal-medium.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/medikal-medium.png);"></div>
-										<div class="stories__slide-txt" style="">медикал медиум</div>
+								<div class="stories__slide" title="медикалмедиум">
+									<a href="./tags/./medikalmedium.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/medikalmedium.png);"></div>
+										<div class="stories__slide-txt" style="">медикалмедиум</div>
 									</a>
 								</div>
 							</div>
@@ -111,210 +103,82 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="сок сельдерея">
-									<a href="./tags/./sok-sel-dereya.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/sok-sel-dereya.png);"></div>
-										<div class="stories__slide-txt" style="">сок сельдерея</div>
+								<div class="stories__slide" title="anishapo смузи детокс">
+									<a href="./tags/./anishapo-smuzi-detoks.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-smuzi-detoks.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo смузи детокс</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="medicalmedium ukraine">
-									<a href="./tags/./medicalmedium-ukraine.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/medicalmedium-ukraine.png);"></div>
-										<div class="stories__slide-txt" style="">medicalmedium ukraine</div>
+								<div class="stories__slide" title="спасениепечени">
+									<a href="./tags/./spaseniepecheni.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/spaseniepecheni.png);"></div>
+										<div class="stories__slide-txt" style="">спасениепечени</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="спасение печени">
-									<a href="./tags/./spasenie-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/spasenie-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">спасение печени</div>
+								<div class="stories__slide" title="петрушечнаявода">
+									<a href="./tags/./petrushechnayavoda.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/petrushechnayavoda.png);"></div>
+										<div class="stories__slide-txt" style="">петрушечнаявода</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="medicalmedium">
-									<a href="./tags/./medicalmedium.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/medicalmedium.png);"></div>
-										<div class="stories__slide-txt" style="">medicalmedium</div>
+								<div class="stories__slide" title="anishapo утреннийритуал">
+									<a href="./tags/./anishapo-utrenniyritual.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-utrenniyritual.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo утреннийритуал</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="едаменяющая жизнь">
-									<a href="./tags/./edamenyayushchaya-zhizn-.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/edamenyayushchaya-zhizn-.png);"></div>
-										<div class="stories__slide-txt" style="">едаменяющая жизнь</div>
+								<div class="stories__slide" title="anishapo кожа">
+									<a href="./tags/./anishapo-kozha.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-kozha.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo кожа</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="liver rescue book">
-									<a href="./tags/./liver-rescue-book.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/liver-rescue-book.png);"></div>
-										<div class="stories__slide-txt" style="">liver rescue book</div>
+								<div class="stories__slide" title="anishapo ногти">
+									<a href="./tags/./anishapo-nogti.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-nogti.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo ногти</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="очищение печени">
-									<a href="./tags/./ochishchenie-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ochishchenie-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">очищение печени</div>
+								<div class="stories__slide" title="anishapo волосы">
+									<a href="./tags/./anishapo-volosy.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-volosy.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo волосы</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="чистка печени">
-									<a href="./tags/./chistka-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/chistka-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">чистка печени</div>
+								<div class="stories__slide" title="сфс сподарками">
+									<a href="./tags/./sfs-spodarkami.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/sfs-spodarkami.png);"></div>
+										<div class="stories__slide-txt" style="">сфс сподарками</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="спасение печени 369">
-									<a href="./tags/./spasenie-pecheni-369.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/spasenie-pecheni-369.png);"></div>
-										<div class="stories__slide-txt" style="">спасение печени 369</div>
+								<div class="stories__slide" title="vimergy">
+									<a href="./tags/./vimergy.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/vimergy.png);"></div>
+										<div class="stories__slide-txt" style="">vimergy</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="сельдереев ыйсок">
-									<a href="./tags/./sel-dereev-yysok.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/sel-dereev-yysok.png);"></div>
-										<div class="stories__slide-txt" style="">сельдереев ыйсок</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo healingfood">
-									<a href="./tags/./anishapo-healingfood.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-healingfood.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo healingfood</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="liver rescue">
-									<a href="./tags/./liver-rescue.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/liver-rescue.png);"></div>
-										<div class="stories__slide-txt" style="">liver rescue</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="celery juice">
-									<a href="./tags/./celery-juice.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/celery-juice.png);"></div>
-										<div class="stories__slide-txt" style="">celery juice</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="детокс">
-									<a href="./tags/./detoks.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/detoks.png);"></div>
-										<div class="stories__slide-txt" style="">детокс</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="исце ление печени">
-									<a href="./tags/./istse-lenie-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/istse-lenie-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">исце ление печени</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo celery">
-									<a href="./tags/./anishapo-celery.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-celery.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo celery</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="живаяеда">
-									<a href="./tags/./zhivayaeda.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/zhivayaeda.png);"></div>
-										<div class="stories__slide-txt" style="">живаяеда</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="здоровье печени">
-									<a href="./tags/./zdorov-e-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/zdorov-e-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">здоровье печени</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="сок сельдерея каждый день">
-									<a href="./tags/./sok-sel-dereya-kazhdyy-den-.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/sok-sel-dereya-kazhdyy-den-.png);"></div>
-										<div class="stories__slide-txt" style="">сок сельдерея каждый день</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="думайчтокладешьврот">
-									<a href="./tags/./dumaychtokladesh-vrot.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/dumaychtokladesh-vrot.png);"></div>
-										<div class="stories__slide-txt" style="">думайчтокладешьврот</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo 369">
-									<a href="./tags/./anishapo-369.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-369.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo 369</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo утрен ний ритуал">
-									<a href="./tags/./anishapo-utren-niy-ritual.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-utren-niy-ritual.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo утрен ний ритуал</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="книга спасение печени">
-									<a href="./tags/./kniga-spasenie-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/kniga-spasenie-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">книга спасение печени</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="зло для печени">
-									<a href="./tags/./zlo-dlya-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/zlo-dlya-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">зло для печени</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="369 очищение печени">
-									<a href="./tags/./369-ochishchenie-pecheni.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/369-ochishchenie-pecheni.png);"></div>
-										<div class="stories__slide-txt" style="">369 очищение печени</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="живая вода">
-									<a href="./tags/./zhivaya-voda.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/zhivaya-voda.png);"></div>
-										<div class="stories__slide-txt" style="">живая вода</div>
+								<div class="stories__slide" title="anishapo vitamins">
+									<a href="./tags/./anishapo-vitamins.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-vitamins.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo vitamins</div>
 									</a>
 								</div>
 							</div>
@@ -340,6 +204,29 @@
 					</div>
 
 					<div class="links-page-list">
+
+
+
+						<div class="links-page-btn-pic">
+							<center><img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/75576703_623080791779685_500093228300963932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=NVS0esl4fMsAX8RikCZ&oh=8bff1d85bea748d5457cc8834d05f18a&oe=5E7E1A4F" alt="">
+							</img></center>
+						</div>
+
+
+
+
+
+						<a href="http://newhabit.tilda.ws/menu" class="links-page-btn " style="
+" 
+						target="_blank"
+>
+
+							<strong>
+								Сайт
+							</strong>
+						</a>
+
+
 					</div>
 
 					<div class="links-page-soc">
