--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="энтониуильям medicalmedium russia anishapo translate healingfood ukraine едаменяющая жизнь тенерифе tenerife зожбалдеж">
-    <meta name="keywords" content="энтониуильям medicalmedium russia anishapo translate healingfood ukraine едаменяющая жизнь тенерифе tenerife зожбалдеж" />
+    <meta name="description" content="medicalmedium russia энтониуильям anishapo translate healingfood ukraine едаменяющая жизнь тенерифе tenerife зожбалдеж">
+    <meta name="keywords" content="medicalmedium russia энтониуильям anishapo translate healingfood ukraine едаменяющая жизнь тенерифе tenerife зожбалдеж" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="энтониуильям medicalmedium russia anishapo translate healingfood ukraine едаменяющая жизнь тенерифе tenerife зожбалдеж" />
+    <meta property="og:description" content="medicalmedium russia энтониуильям anishapo translate healingfood ukraine едаменяющая жизнь тенерифе tenerife зожбалдеж" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -95,18 +95,18 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo healingfood">
-									<a href="./tags/./anishapo-healingfood.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-healingfood.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo healingfood</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
 								<div class="stories__slide" title="anishapo translate">
 									<a href="./tags/./anishapo-translate.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-translate.png);"></div>
 										<div class="stories__slide-txt" style="">anishapo translate</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="anishapo healingfood">
+									<a href="./tags/./anishapo-healingfood.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-healingfood.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo healingfood</div>
 									</a>
 								</div>
 							</div>
@@ -152,7 +152,7 @@
 
 
 						<div class="links-page-btn-pic">
-							<center><img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79955867_1787732994693676_2941568632325707798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=jFJak4M_0xoAX-DIMEy&oh=ad1c3d51a06f566e6b346997b9e5233a&oe=5E8FE28A" alt="">
+							<center><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=lTg7EZoovpAAX_i9jwr&oh=dbe04b79cd6fc9b95309a6b9968c0e8f&oe=5E930256" alt="">
 							</img></center>
 						</div>
 
