--- a/stories.html
+++ b/stories.html
@@ -106,6 +106,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="rostki-lyutserny-xxxxxx" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=lTg7EZoovpAAX_i9jwr&oh=dbe04b79cd6fc9b95309a6b9968c0e8f&oe=5E930256" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="zachem-est--zelen--redisa" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79955867_1787732994693676_2941568632325707798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=jFJak4M_0xoAX-DIMEy&oh=ad1c3d51a06f566e6b346997b9e5233a&oe=5E8FE28A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗАЧЕМ ЕСТЬ ЗЕЛЕНЬ РЕДИСА?">
@@ -158,7 +168,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="dorogie-druz-yax-ya-khochu-ot-vsey-dushi-pozdravit-" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77156725_3177098188972418_8139286021232875500_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=klXdxaNzjOUAX-AaL-S&oh=1cfac616865527e049ead7eb24f75bbf&oe=5EAA2B32" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Дорогие друзья, я хочу от всей души поздравить">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77156725_3177098188972418_8139286021232875500_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=WrvzIMpxCcoAX_kE5_H&oh=206b11c5d05360fa75f27f9fd166d861&oe=5EAA2B32" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Дорогие друзья, я хочу от всей души поздравить">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="volny-na-plyazhexxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=er80JJpZJScAX-18hTS&oh=52706cfbcb5e38daa01980fe54205436&oe=5E17D252" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=gSScxF0_Yw4AX_bvZHI&oh=73a27693a0965755477d4c5e739b4359&oe=5E1923D2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="chto-zhe-ty-esh-" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80715239_180566376469424_5263644847650065203_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=Z_t_qNUGrU4AX_wtVIy&oh=790b0adcaa79eca1de66ebe96bb3f144&oe=5E995B94" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО ЖЕ ТЫ ЕШЬ?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80715239_180566376469424_5263644847650065203_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=HV9JBvxNv_IAX8jkloo&oh=0fecc43744f4b0c53fc15ddfec4e4705&oe=5E995B94" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО ЖЕ ТЫ ЕШЬ?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="simptomy-khronicheskogo-obezvozhivaniya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79012842_2795305293861173_4955388126154466684_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=VgqiFCAsEBkAX-vzuR3&oh=32895f60bf32e7b4d562d8874bb37f9d&oe=5E17C8DF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИМПТОМЫ ХРОНИЧЕСКОГО ОБЕЗВОЖИВАНИЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79012842_2795305293861173_4955388126154466684_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=VgqiFCAsEBkAX-vzuR3&oh=bd977ae373292a17b3db6ceebe7d0751&oe=5E191A5F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИМПТОМЫ ХРОНИЧЕСКОГО ОБЕЗВОЖИВАНИЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,16 +279,6 @@
 							<input id="varikoz-kak-sledstvie-khronicheskogo" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/75602183_154596209213826_4616373966861890671_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=tBL9aB2YAiUAX_7AMhO&oh=4b04716712d234ce34fa913d5d244c57&oe=5EA98C1B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ВАРИКОЗ КАК СЛЕДСТВИЕ ХРОНИЧЕСКОГО">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="skol-ko-vody-nuzhno-pit--za-den-" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79498718_102842821157116_5120478440220751382_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=ahwwvBRWKFAAX9dEzer&oh=ed8bd41dc33f434e4d5c8010695b4603&oe=5E97EA8A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СКОЛЬКО ВОДЫ НУЖНО ПИТЬ ЗА ДЕНЬ?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
