--- a/error.html
+++ b/error.html
@@ -43,7 +43,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=l1YqmP1H5z8AX-E1ba2&oh=d1e6f318e7e94b2c7356d676766b2322&oe=5EA51256" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=l1YqmP1H5z8AX-E1ba2&oh=f6fc635fd2202843a1c141274c57c8d9&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -84,7 +84,7 @@
 							<a href="./posts/./tim-yan---dushistyy-antivirus.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1165</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1168</span>
 								</div>
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79016788_454957838519446_4630486079322138810_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=Cdkz6TrJeVcAX-D9mTg&oh=c8e25df8c496599dd786f5328b7c453f&oe=5ED4DEA9" alt="ТИМЬЯН - ДУШИСТЫЙ АНТИВИРУС">
 							</div>
@@ -93,7 +93,7 @@
 							<a href="./posts/./samyy-tselebnyy-produkt.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1000</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1007</span>
 								</div>
 								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=7brD2in7FYIAX_VQas0&oh=a57efb061b80ec361bb7a815707afe52&oe=5EC1E22A" alt="САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ">
 							</div>
@@ -102,56 +102,56 @@
 							<a href="./posts/./rostki-lyutserny-xxxxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>702</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>706</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=uNM0DC4Vc0kAX_Teole&oh=1a2adceaf94588c4297b860ee0276e05&oe=5EBA8F56" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=ASdRZI8Vx8cAX-vlrCr&oh=c480ea9cefee7ecbfc5b015122582b93&oe=5EBA8F56" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
 							</div>
 							<div class="article-more__item-name">РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻</div>
-						</a>
-							<a href="./posts/./fokus-v-moem-pitanii.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>686</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80331999_187628665750969_2836041907825409027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=qR3KMbf5lPMAX96lCYb&oh=530f4f9814fac6ae2b3a9935ed7ead0c&oe=5EB6A381" alt="ФОКУС В МОЕМ ПИТАНИИ">
-							</div>
-							<div class="article-more__item-name">ФОКУС В МОЕМ ПИТАНИИ</div>
 						</a>
 							<a href="./posts/./vodaxchay-s-tim-yanom.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>663</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>665</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80778561_1324490884377842_6540309576461882657_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=s1OAqau3HzAAX_pgs4B&oh=8f94a2dbfb55d796dee3f2b4cb440aab&oe=5EA4C91E" alt="ВОДА/ЧАЙ С ТИМЬЯНОМ.">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80778561_1324490884377842_6540309576461882657_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=s1OAqau3HzAAX_pgs4B&oh=2d4896f457f231de90ab366a8afa95da&oe=5ECC561E" alt="ВОДА/ЧАЙ С ТИМЬЯНОМ.">
 							</div>
 							<div class="article-more__item-name">ВОДА/ЧАЙ С ТИМЬЯНОМ.</div>
 						</a>
 							<a href="./posts/./zachem-est--zelen--redisa.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>630</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>637</span>
 								</div>
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79955867_1787732994693676_2941568632325707798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=bhUO40n1QxcAX9pKlFA&oh=de1a1632f391c09a6af37ebf82cfc158&oe=5EB76F8A" alt="ЗАЧЕМ ЕСТЬ ЗЕЛЕНЬ РЕДИСА?">
 							</div>
 							<div class="article-more__item-name">ЗАЧЕМ ЕСТЬ ЗЕЛЕНЬ РЕДИСА?</div>
 						</a>
-							<a href="./posts/./retsept-chaya-iz-khurmy-dlya-lecheniya.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>619</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77110458_588200205080677_5107032566509865313_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=Ru1K-YR6N4sAX_u6pn4&oh=25677b13cea3f8f703266e2c72d2bae3&oe=5ED627E4" alt="РЕЦЕПТ ЧАЯ ИЗ ХУРМЫ ДЛЯ ЛЕЧЕНИЯ">
-							</div>
-							<div class="article-more__item-name">РЕЦЕПТ ЧАЯ ИЗ ХУРМЫ ДЛЯ ЛЕЧЕНИЯ</div>
-						</a>
 							<a href="./posts/./efirnoe-maslo-tim-yana.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>614</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>617</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79816523_170183511051586_1081607527197908390_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=XbHWSbM3Lf0AX-dY861&oh=6e75499b25f95c090ac4f2068e96d3c6&oe=5EA58585" alt="ЭФИРНОЕ МАСЛО ТИМЬЯНА">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79816523_170183511051586_1081607527197908390_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=eQvyGSc8KF4AX_HyW3B&oh=f11d4dcf7b88ae2d38e125c0b2111c97&oe=5ECD1285" alt="ЭФИРНОЕ МАСЛО ТИМЬЯНА">
 							</div>
 							<div class="article-more__item-name">ЭФИРНОЕ МАСЛО ТИМЬЯНА</div>
+						</a>
+							<a href="./posts/./sok-travy-yachmenya-xxxx.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>584</span>
+								</div>
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80329479_476080676642436_8340204187979807971_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=SOKK88AlTRsAX8xrefx&oh=d58518b07a28d2955705c19200cd5f72&oe=5EBEEDD1" alt="СОК ТРАВЫ ЯЧМЕНЯ 😎🌱">
+							</div>
+							<div class="article-more__item-name">СОК ТРАВЫ ЯЧМЕНЯ 😎🌱</div>
+						</a>
+							<a href="./posts/./volny-na-plyazhexxx.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>524</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=J4I9qjQFBXIAX-KFUu-&oh=39be178fbc27f7f8b99ea12b37f48a22&oe=5E28F5D2" alt="Волны на пляже 🌊">
+							</div>
+							<div class="article-more__item-name">Волны на пляже 🌊</div>
 						</a>
 						</div>
 				</div>
