--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="medicalmedium russia энтониуильям anishapo translate healingfood ukraine едаменяющая жизнь смузи детокс тенерифе tenerife">
-    <meta name="keywords" content="medicalmedium russia энтониуильям anishapo translate healingfood ukraine едаменяющая жизнь смузи детокс тенерифе tenerife" />
+    <meta name="description" content="anishapo healingfood medicalmedium russia энтониуильям translate ukraine едаменяющая жизнь смузи детокс тенерифе tenerife">
+    <meta name="keywords" content="anishapo healingfood medicalmedium russia энтониуильям translate ukraine едаменяющая жизнь смузи детокс тенерифе tenerife" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="medicalmedium russia энтониуильям anishapo translate healingfood ukraine едаменяющая жизнь смузи детокс тенерифе tenerife" />
+    <meta property="og:description" content="anishapo healingfood medicalmedium russia энтониуильям translate ukraine едаменяющая жизнь смузи детокс тенерифе tenerife" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -62,7 +62,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=l1YqmP1H5z8AX-E1ba2&oh=d1e6f318e7e94b2c7356d676766b2322&oe=5EA51256" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=l1YqmP1H5z8AX-E1ba2&oh=f6fc635fd2202843a1c141274c57c8d9&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -90,10 +90,10 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="энтониуильям">
-									<a href="./tags/./entoniuil-yam.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/entoniuil-yam.png);"></div>
-										<div class="stories__slide-txt" style="">энтониуильям</div>
+								<div class="stories__slide" title="anishapo healingfood">
+									<a href="./tags/./anishapo-healingfood.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-healingfood.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo healingfood</div>
 									</a>
 								</div>
 							</div>
@@ -106,10 +106,10 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo healingfood">
-									<a href="./tags/./anishapo-healingfood.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-healingfood.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo healingfood</div>
+								<div class="stories__slide" title="энтониуильям">
+									<a href="./tags/./entoniuil-yam.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/entoniuil-yam.png);"></div>
+										<div class="stories__slide-txt" style="">энтониуильям</div>
 									</a>
 								</div>
 							</div>
@@ -155,7 +155,7 @@
 
 
 						<div class="links-page-btn-pic">
-							<center><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80329479_476080676642436_8340204187979807971_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=SOKK88AlTRsAX8xrefx&oh=d58518b07a28d2955705c19200cd5f72&oe=5EBEEDD1" alt="">
+							<center><img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83654188_2654364714649659_800838728339838733_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=5ALN8ADsO8cAX-JU-15&oh=56586c0ad5bdf55d668cbcd98c62f7bb&oe=5EBFA785" alt="">
 							</img></center>
 						</div>
 
@@ -235,6 +235,7 @@ $(document).ready(function(){
 	}
 	else if (lid && lid == "true") {
         localStorage.setItem("hasToken", true);
+		$("#settingsContainer").show();
 	}
 	else if (localStorage.getItem("hasToken"))
 	{
