--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=l1YqmP1H5z8AX-E1ba2&oh=d1e6f318e7e94b2c7356d676766b2322&oe=5EA51256" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=l1YqmP1H5z8AX-E1ba2&oh=f6fc635fd2202843a1c141274c57c8d9&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -106,6 +106,26 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="o-fenkhele-xxxx" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83654188_2654364714649659_800838728339838733_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=5ALN8ADsO8cAX-JU-15&oh=56586c0ad5bdf55d668cbcd98c62f7bb&oe=5EBFA785" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="О ФЕНХЕЛЕ 🌱👍">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="novaya-kniga-xmedicalmedium" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82628613_595587020992835_8318551731651324857_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=9rWCKJACZYIAX_7i5Pk&oh=70a564a929f5fa287ee683ba2c82a74a&oe=5EDA5B59" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="НОВАЯ КНИГА @medicalmedium">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="sok-travy-yachmenya-xxxx" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80329479_476080676642436_8340204187979807971_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=SOKK88AlTRsAX8xrefx&oh=d58518b07a28d2955705c19200cd5f72&oe=5EBEEDD1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СОК ТРАВЫ ЯЧМЕНЯ 😎🌱">
@@ -128,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="rostki-lyutserny-xxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=uNM0DC4Vc0kAX_Teole&oh=1a2adceaf94588c4297b860ee0276e05&oe=5EBA8F56" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=ASdRZI8Vx8cAX-vlrCr&oh=c480ea9cefee7ecbfc5b015122582b93&oe=5EBA8F56" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +168,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="efirnoe-maslo-tim-yana" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79816523_170183511051586_1081607527197908390_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=XbHWSbM3Lf0AX-dY861&oh=6e75499b25f95c090ac4f2068e96d3c6&oe=5EA58585" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭФИРНОЕ МАСЛО ТИМЬЯНА">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79816523_170183511051586_1081607527197908390_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=eQvyGSc8KF4AX_HyW3B&oh=f11d4dcf7b88ae2d38e125c0b2111c97&oe=5ECD1285" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭФИРНОЕ МАСЛО ТИМЬЯНА">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -158,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="vodaxchay-s-tim-yanom" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80778561_1324490884377842_6540309576461882657_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=s1OAqau3HzAAX_pgs4B&oh=8f94a2dbfb55d796dee3f2b4cb440aab&oe=5EA4C91E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ВОДА/ЧАЙ С ТИМЬЯНОМ.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80778561_1324490884377842_6540309576461882657_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=s1OAqau3HzAAX_pgs4B&oh=2d4896f457f231de90ab366a8afa95da&oe=5ECC561E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ВОДА/ЧАЙ С ТИМЬЯНОМ.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="dorogie-druz-yax-ya-khochu-ot-vsey-dushi-pozdravit-" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77156725_3177098188972418_8139286021232875500_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=8tgn1wws2LIAX_SKA6G&oh=ff472f50d28dfdb9f984f5ff03e4e6ce&oe=5ED1B832" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Дорогие друзья, я хочу от всей души поздравить">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77156725_3177098188972418_8139286021232875500_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=I2ClmR5kL9wAX95Gmr6&oh=4cb70e26463cae7c66538a880568050e&oe=5ED1B832" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Дорогие друзья, я хочу от всей души поздравить">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +218,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="volny-na-plyazhexxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Ki2if2MJXVYAX_nau9N&oh=88571402ee85a6a01d594cd8c250376a&oe=5E27A452" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=J4I9qjQFBXIAX-KFUu-&oh=39be178fbc27f7f8b99ea12b37f48a22&oe=5E28F5D2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="chto-zhe-ty-esh-" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80715239_180566376469424_5263644847650065203_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=BtZ4_O8R8Q0AX9ZkJYs&oh=6975974c723c88294da949bf0ace956d&oe=5EC0E894" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО ЖЕ ТЫ ЕШЬ?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80715239_180566376469424_5263644847650065203_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=_VxVqgqmruwAX81Wtpt&oh=0d4ef45dd744974bb6e6549323327e2b&oe=5EC0E894" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО ЖЕ ТЫ ЕШЬ?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -259,26 +279,6 @@
 							<input id="chem-polezna-khurma-xx" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77039573_2525620614384188_9028683847386060643_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=sALBDFqr1jEAX-Kqtg2&oh=7205ee1d0e57c90fa4e665e8fdaf8677&oe=5EC25100" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧЕМ ПОЛЕЗНА ХУРМА 🙃">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="chto-my-znaem-o-petrushke" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/75576703_623080791779685_500093228300963932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=7CHOvVJF-xcAX-OqOfv&oh=792ff4cb3bdabd4870583fc7bee39dbb&oe=5EA5A74F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО МЫ ЗНАЕМ О ПЕТРУШКЕ?">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="novogodniy-stol-xxxx" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/76851461_567100334111816_8790846081603229564_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=rBMFATI12pYAX9xXkcT&oh=4b75bd011ebfa05e473517068151d2e1&oe=5EC14BB5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="НОВОГОДНИЙ СТОЛ 🎄🥂">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
