--- a/error.html
+++ b/error.html
@@ -43,7 +43,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=l1YqmP1H5z8AX-E1ba2&oh=f6fc635fd2202843a1c141274c57c8d9&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=xY3t05bL2q4AX8ibXMn&oh=7dbdd08ecd752001c2a5e0c30e2e29b5&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -93,16 +93,16 @@
 							<a href="./posts/./samyy-tselebnyy-produkt.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1007</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1010</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=7brD2in7FYIAX_VQas0&oh=a57efb061b80ec361bb7a815707afe52&oe=5EC1E22A" alt="САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=LS18f5G723AAX84HGf4&oh=5f1bff632f123530675c3c75357d8086&oe=5EC1E22A" alt="САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ">
 							</div>
 							<div class="article-more__item-name">САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ</div>
 						</a>
 							<a href="./posts/./rostki-lyutserny-xxxxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>706</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>708</span>
 								</div>
 								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=ASdRZI8Vx8cAX-vlrCr&oh=c480ea9cefee7ecbfc5b015122582b93&oe=5EBA8F56" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
 							</div>
@@ -120,11 +120,20 @@
 							<a href="./posts/./zachem-est--zelen--redisa.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>637</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>638</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79955867_1787732994693676_2941568632325707798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=bhUO40n1QxcAX9pKlFA&oh=de1a1632f391c09a6af37ebf82cfc158&oe=5EB76F8A" alt="ЗАЧЕМ ЕСТЬ ЗЕЛЕНЬ РЕДИСА?">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79955867_1787732994693676_2941568632325707798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=FQ-P8TSo4QsAX_LAkr2&oh=85487a6536563bd7c1834bd8d4d859b9&oe=5EB76F8A" alt="ЗАЧЕМ ЕСТЬ ЗЕЛЕНЬ РЕДИСА?">
 							</div>
 							<div class="article-more__item-name">ЗАЧЕМ ЕСТЬ ЗЕЛЕНЬ РЕДИСА?</div>
+						</a>
+							<a href="./posts/./o-fenkhele-xxxx.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>621</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83654188_2654364714649659_800838728339838733_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=5ALN8ADsO8cAX-JU-15&oh=56586c0ad5bdf55d668cbcd98c62f7bb&oe=5EBFA785" alt="О ФЕНХЕЛЕ 🌱👍">
+							</div>
+							<div class="article-more__item-name">О ФЕНХЕЛЕ 🌱👍</div>
 						</a>
 							<a href="./posts/./efirnoe-maslo-tim-yana.html" class="article-more__item">
 							<div class="article-more__item-pic">
@@ -143,15 +152,6 @@
 								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80329479_476080676642436_8340204187979807971_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=SOKK88AlTRsAX8xrefx&oh=d58518b07a28d2955705c19200cd5f72&oe=5EBEEDD1" alt="СОК ТРАВЫ ЯЧМЕНЯ 😎🌱">
 							</div>
 							<div class="article-more__item-name">СОК ТРАВЫ ЯЧМЕНЯ 😎🌱</div>
-						</a>
-							<a href="./posts/./volny-na-plyazhexxx.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>524</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=J4I9qjQFBXIAX-KFUu-&oh=39be178fbc27f7f8b99ea12b37f48a22&oe=5E28F5D2" alt="Волны на пляже 🌊">
-							</div>
-							<div class="article-more__item-name">Волны на пляже 🌊</div>
 						</a>
 						</div>
 				</div>
