--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=xY3t05bL2q4AX8ibXMn&oh=7dbdd08ecd752001c2a5e0c30e2e29b5&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=H9ZLfHRP-JkAX-lBMRo&oh=303c84dd0de9281116d93d23d333ca03&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -106,6 +106,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="moya-istoriyaxxxxx" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82958299_179337959950513_1325142528092314413_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=NXHtrHc0dTsAX8nQ1IS&oh=37e31fa74532d05b737950cdd7ff1162&oe=5ED0422C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="o-fenkhele-xxxx" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83654188_2654364714649659_800838728339838733_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=nfAkdZQFGSUAX9c8c4u&oh=37fb3ddf6f2f70b376f048f9f1efb45f&oe=5EBFA785" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="О ФЕНХЕЛЕ 🌱👍">
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="samyy-tselebnyy-produkt" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=LS18f5G723AAX84HGf4&oh=5f1bff632f123530675c3c75357d8086&oe=5EC1E22A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=SsC5GBTD2lYAX_yRIrW&oh=b209227bcb648a4c8414d1d4edcb43ed&oe=5EC1E22A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -158,7 +168,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zachem-est--zelen--redisa" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79955867_1787732994693676_2941568632325707798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=FQ-P8TSo4QsAX_LAkr2&oh=85487a6536563bd7c1834bd8d4d859b9&oe=5EB76F8A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗАЧЕМ ЕСТЬ ЗЕЛЕНЬ РЕДИСА?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79955867_1787732994693676_2941568632325707798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=_MqAvwBOJGwAX_XN6-k&oh=8f4aa4ed516ece7081e3fbda950a392c&oe=5EB76F8A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗАЧЕМ ЕСТЬ ЗЕЛЕНЬ РЕДИСА?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="krasivoe-chislo-2020" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81031252_196979424678428_6745793589002918615_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=zaMUn_gTcssAX9uw3og&oh=0224a8651534f90516c2cb8b514a4d6f&oe=5ED6363E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Красивое число 2020.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81031252_196979424678428_6745793589002918615_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=axaIE54rBzkAX8xP1Y2&oh=1747103b135c8f8b860f046f0b44c0a6&oe=5ED6363E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Красивое число 2020.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="volny-na-plyazhexxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=e51mWZy3jQYAX9o2PnF&oh=c04bf0ca1ed02e0427c37d5d20419716&oe=5E2C4192" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=e51mWZy3jQYAX9o2PnF&oh=be724385cfc149561fa84048a7af5967&oe=5E2E3BD2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="fokus-v-moem-pitanii" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80331999_187628665750969_2836041907825409027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=1evEwY08dBkAX_UuFlm&oh=351f14d8e1a2f32292e85393a22f961d&oe=5EB6A381" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ФОКУС В МОЕМ ПИТАНИИ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80331999_187628665750969_2836041907825409027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=MN2Q3Z24no0AX_sDvt3&oh=725a3f2027f662eff7fb8b298670cf1b&oe=5EB6A381" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ФОКУС В МОЕМ ПИТАНИИ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="chem-polezen-apel-sinovyy-sok-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/76884937_2463503670575415_6744966613173054683_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=LVnszPWyh5sAX8D5tnR&oh=cc6416e2ec0c477951cb95b4bc1f0736&oe=5EC9562E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧЕМ ПОЛЕЗЕН АПЕЛЬСИНОВЫЙ СОК 🍊☀️">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/76884937_2463503670575415_6744966613173054683_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=jLXviqbiqmEAX90f7Gd&oh=ce4e918a70199999996a31b5f4b858e0&oe=5EC9562E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧЕМ ПОЛЕЗЕН АПЕЛЬСИНОВЫЙ СОК 🍊☀️">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,16 +279,6 @@
 							<input id="ukrop-xx" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80435458_1252978434894673_5953674433393083400_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=9j_RCiYuL44AX8ZytEt&oh=0a28f981e74553312b813465c7158146&oe=5ED7B68B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="УКРОП 🌱">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="chem-polezna-khurma-xx" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77039573_2525620614384188_9028683847386060643_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=SXy1t8lnfsMAX-85PTA&oh=9bd7d93f4108b20ee7453ba9158cddb5&oe=5EC25100" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧЕМ ПОЛЕЗНА ХУРМА 🙃">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
